[gd_scene load_steps=10 format=3 uid="uid://hs6qdmposrki"]

[ext_resource type="Script" path="res://train-track-pieces/BaseTrainTrackPiece.gd" id="1_kh8pk"]
[ext_resource type="Script" path="res://train-track-pieces/ConnectionPoint.gd" id="2_61qwv"]
[ext_resource type="Texture2D" uid="uid://inslh1beh61l" path="res://train-track-pieces/QuarterStraight.svg" id="3_gogrh"]
[ext_resource type="Texture2D" uid="uid://dmls1eufjhk03" path="res://arrow.png" id="4_sqpeo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ofwjh"]
radius = 15.0

[sub_resource type="LabelSettings" id="LabelSettings_4jn3p"]
font_size = 15

[sub_resource type="LabelSettings" id="LabelSettings_6rs1a"]
line_spacing = -2.0
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_udy3i"]
font_size = 10

[sub_resource type="Curve2D" id="Curve2D_43jlv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -16, 0, 0, 0, 0, 0, 15, 0)
}
point_count = 2

[node name="BaseTrainTrackPiece" type="Node2D"]
script = ExtResource("1_kh8pk")
is_switch = false

[node name="ConnectionPoints" type="Node2D" parent="."]

[node name="ConnectionPoint1Left" type="RayCast2D" parent="ConnectionPoints"]
position = Vector2(-16, 0)
exclude_parent = false
target_position = Vector2(-10, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("2_61qwv")

[node name="ConnectionPointSnapArea" type="Area2D" parent="ConnectionPoints/ConnectionPoint1Left"]
collision_layer = 2
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectionPoints/ConnectionPoint1Left/ConnectionPointSnapArea"]
shape = SubResource("CircleShape2D_ofwjh")
disabled = true

[node name="ColorRect" type="ColorRect" parent="ConnectionPoints/ConnectionPoint1Left"]
offset_left = 10.0
offset_top = -15.0
offset_right = 22.0
offset_bottom = -3.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ID" type="Label" parent="ConnectionPoints/ConnectionPoint1Left"]
offset_left = 10.0
offset_top = -3.0
offset_right = 25.0
offset_bottom = 23.0
text = "-1"
label_settings = SubResource("LabelSettings_4jn3p")

[node name="SoftConnectionInfo" type="Label" parent="ConnectionPoints/ConnectionPoint1Left"]
offset_left = -26.0
offset_top = -89.0
offset_right = 62.0
offset_bottom = -65.0
text = "Soft Disconnected"
label_settings = SubResource("LabelSettings_6rs1a")

[node name="HardConnectionInfo" type="Label" parent="ConnectionPoints/ConnectionPoint1Left"]
offset_left = -26.0
offset_top = -65.0
offset_right = 69.0
offset_bottom = -41.0
text = "Hard Disconnected"
label_settings = SubResource("LabelSettings_6rs1a")

[node name="ConnectionPoint2TopRight" type="RayCast2D" parent="ConnectionPoints"]
position = Vector2(15, 0)
exclude_parent = false
target_position = Vector2(10, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("2_61qwv")

[node name="ConnectionPointSnapArea" type="Area2D" parent="ConnectionPoints/ConnectionPoint2TopRight"]
collision_layer = 2
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectionPoints/ConnectionPoint2TopRight/ConnectionPointSnapArea"]
shape = SubResource("CircleShape2D_ofwjh")
disabled = true

[node name="ColorRect" type="ColorRect" parent="ConnectionPoints/ConnectionPoint2TopRight"]
offset_left = -21.0
offset_top = -15.0
offset_right = -9.0
offset_bottom = -3.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="ID" type="Label" parent="ConnectionPoints/ConnectionPoint2TopRight"]
offset_left = -21.0
offset_top = -3.0
offset_right = -6.0
offset_bottom = 23.0
text = "-1"
label_settings = SubResource("LabelSettings_4jn3p")

[node name="SoftConnectionInfo" type="Label" parent="ConnectionPoints/ConnectionPoint2TopRight"]
offset_left = -57.0
offset_top = 33.0
offset_right = 31.0
offset_bottom = 57.0
text = "Soft Disconnected"
label_settings = SubResource("LabelSettings_6rs1a")

[node name="HardConnectionInfo" type="Label" parent="ConnectionPoints/ConnectionPoint2TopRight"]
offset_left = -57.0
offset_top = 57.0
offset_right = 38.0
offset_bottom = 81.0
text = "Hard Disconnected"
label_settings = SubResource("LabelSettings_6rs1a")

[node name="Image" type="Sprite2D" parent="."]
texture = ExtResource("3_gogrh")

[node name="ID" type="Label" parent="."]
offset_left = -30.0
offset_top = -47.0
offset_right = 35.0
offset_bottom = -33.0
text = "null"
label_settings = SubResource("LabelSettings_udy3i")
horizontal_alignment = 1
autowrap_mode = 3

[node name="SwitchStateStraight" type="Sprite2D" parent="."]
visible = false
position = Vector2(-34, -51)
texture = ExtResource("4_sqpeo")

[node name="SwitchStateNotStraight" type="Sprite2D" parent="."]
visible = false
position = Vector2(-37, -31)
rotation = 0.325486
texture = ExtResource("4_sqpeo")

[node name="DebugRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
visible = false
polygon = PackedVector2Array(17, -31.3, 20, -24.9, 20, 29.7, 19.9, 32.5, 5.8, 32.5, -3, 30.5, -3, 32.5, -18, 32.5, -20, 28.5, -20, 12.5, -18, 8.5, -18, -32.5, -8.7, -32.5, -5.2, -28.5, 4.4, -28.5, 8.4, -32.5, 17, -32.5)

[node name="PathStraight" type="Path2D" parent="."]
curve = SubResource("Curve2D_43jlv")

[connection signal="body_entered" from="ConnectionPoints/ConnectionPoint1Left" to="." method="_on_ConnectionPoint_body_entered"]
[connection signal="body_exited" from="ConnectionPoints/ConnectionPoint1Left" to="." method="_on_ConnectionPoint_body_exited"]
[connection signal="body_entered" from="ConnectionPoints/ConnectionPoint2TopRight" to="." method="_on_ConnectionPoint_body_entered"]
[connection signal="body_exited" from="ConnectionPoints/ConnectionPoint2TopRight" to="." method="_on_ConnectionPoint_body_exited"]
[connection signal="input_event" from="HitBox" to="." method="_on_HitBox_input_event"]
